[package]
name = "n_body"
version = "0.1.0"
authors = ["Mads Horn <madshorn@operamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.2"
rand = "0.6.5"
nannou = { git = "https://github.com/nannou-org/nannou", branch = "master" }
